# ummah

./: Cargo.toml  Makefile  README.md
src/: arguments.rs  commands.rs  core.rs  day.rs  fs.rs  lib.rs  main.rs  parser.rs  prayer.rs  request_handler.rs  request_parser.rs  tests.rs  time.rs  timetable_generator.rs  types.rs
src/argparser/: arguments.rs  settings.rs
src/commands/: arguments.rs  settings.rs
src/core/: fs.rs  html_creator.rs  prayer.rs  request_handler.rs  timetable_generator.rs
src/prayer/: settings.rs
src/request/: parser.rs
src/request_parser/: csv_parser.rs  query_builder.rs
src/time/: day.rs  month.rs
