[package]
name = "adhan"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.performance]
inherits = "release"
opt-level = 3
panic = "abort"
strip = "symbols"
debug = 0
lto = "fat"
incremental = true


[dependencies]
clap = { version = "3.1.14", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
chrono-utilities = { git = "https://github.com/liquidscorpio/chrono-utils" }
csv = "1.1.6"
dirs-next = "2.0.0"
reqwest = "0.11.10"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
thiserror = "1.0.31"
tokio = { version = "1.18.0", features = ["rt-multi-thread", "macros"] }
