[package]
name = "ummah"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.performance]
inherits = "release"
debug = 0
incremental = true
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"

[dependencies]
bytes = "1.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-utilities = { git = "https://github.com/liquidscorpio/chrono-utils" }
clap = { version = "3.1.14", features = ["derive"] }
csv = "1.1.6"
dirs-next = "2.0.0"
html-builder = "0.3.0"
openssl = { version = "0.10.40", features = ["vendored"] }
reqwest = "0.11.10"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
thiserror = "1.0.31"
